completed module 3, server streaming

--- a/module3/Makefile
+++ b/module3/Makefile
@@ -10,7 +10,7 @@ get-protoc-plugins:
 proto-gen:
 	protoc --go_out=. --go_opt=paths=source_relative \
 		--go-grpc_out=. --go-grpc_opt=paths=source_relative \
-		proto/todo.proto
+		proto/streaming.proto
 
 .PHONY: run-server
 run-server:
